# Music-metadata-collector

./: .gitignore  Current Track.bat  README.md  beatport_functions.py  deezer_funcs.py  deezer_functions.py  examples.ipynb  genius_functions.py  last_fm_functions.py  main.py  music_brainz_functions.py  notes.md  overall.py  pands_testing.py  pyproject.toml  pytest.ini  sp_playcount_funcs.py  spotify api.ipynb  spotify pandas.ipynb  spotify playcount api.ipynb  spotify_funcs.py  spotify_functions.py  spotify_playcount_functions.py  to-do.md  utility_funcs.py  utility_functions.py
MMC/: __init__.py  constants.py
MMC/Core/: __init__.py  metadata_collector.py
MMC/Services/: __init__.py  beatport.py  deezer.py  deezer_models.py  deezer_types.py  genius.py  last_fm.py  music_brainz.py  spotify.py  spotify_playcount_functions.py
MMC/Util/: cache.py  credentials.py  dict_helper.py  exceptions.py  http_client.py  utility.py
MMC/models/: base_models.py  deezer_models.py  last_fm_models.py  music_brainz_models.py  spotify_models.py
MMC/types/: types.py
MMC/utils/: __init__.py  cache.py  debug.py  dict_helper.py  http_client.py  list_helper.py  url_builder.py
examples/: seaches.ipynb  utils.py
scripts/: deezer_fixture_ids.json  fixture_ids.json  generate_deezer_fixtures.py  generate_fixtures.py
scripts/fixture_generators/: url_builder_generator.py  utils.py
tests/: test_deezer_formatting.py  test_deezer_lookups.py  test_deezer_tracks.py  test_lookups.py  test_url_builder.py
tests/fixtures/: url_builder_fixtures.json
tutorials/: exploring api.ipynb
(+69 files in other folders)
