[project]
name = "music-metadata-collector"
version = "0.1.0"
description = "Music metadata collector for several music services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "spotipy>=2.25.1",
]

[tool.ruff]
per-file-ignores = { "test_*.py" = ["D103"] }

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
