[project]
name = "music-metadata-collector"
version = "0.1.0"
description = "Music metadata collector for several music services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "spotipy>=2.25.1",
]

[tool.ruff]
lint.select = [
 "ALL"
]
ignore = [

 "Q000", # single vs double quotes
 "Q002", # single vs double quotes in docstrings
 "T201", # print statements
 "CPY001", # copywrite comments
 "DOC201", # document function arguments

]
preview = true
per-file-ignores = { "test_*.py" = ["D103", "S101"] } #ignore docs and asserts in tests

[dependency-groups]
dev = [
    "ruff>=0.12.0",
]
